src/test/java/FeaturePushFailTest.java
import java.util.*;
public class FeaturePushFailTest {

	public static void main(String[] args) {
		
		if (true)
			System.out.println("Fail Checkstyle");
		if true
			System.out.println("Fail Gradle");
		if (true) {
			
		}

	}

}
